// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/searchabledropdown > should create a dropdown with a search box for 5 options 1`] = `
<div
  className="ms-Dropdown-container msla-searchable-dropdown"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    className="ms-Dropdown dropdown-109"
    data-is-focusable={true}
    data-ktp-target={true}
    id="Dropdown1"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex={0}
  >
    <span
      aria-invalid={false}
      className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-110"
      id="Dropdown1-option"
    >
      Select an option
    </span>
    <span
      className="ms-Dropdown-caretDownWrapper caretDownWrapper-111"
    >
      <i
        aria-hidden={true}
        className="ms-Dropdown-caretDown caretDown-129"
        data-icon-name="ChevronDown"
      >
        
      </i>
    </span>
  </div>
</div>
`;

exports[`lib/searchabledropdown > should create a dropdown without a search box for 3 options 1`] = `
<div
  className="ms-Dropdown-container msla-searchable-dropdown"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    className="ms-Dropdown dropdown-109"
    data-is-focusable={true}
    data-ktp-target={true}
    id="Dropdown0"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex={0}
  >
    <span
      aria-invalid={false}
      className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-110"
      id="Dropdown0-option"
    >
      Select an option
    </span>
    <span
      className="ms-Dropdown-caretDownWrapper caretDownWrapper-111"
    >
      <i
        aria-hidden={true}
        className="ms-Dropdown-caretDown caretDown-129"
        data-icon-name="ChevronDown"
      >
        
      </i>
    </span>
  </div>
</div>
`;
